--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
 </head>
 <body>
     <main>
@@ -13,7 +13,7 @@
         <button id="new-btn">NEW GAME</button>
        </div>
 
-        <h1 style="color: #e0b1cb;">Tik-Tac-Toe</h1>
+        <h1 style="color: #e0b1cb;">Tic-Tac-Toe</h1>
       <div class="container">
         <div class="game">
             <button class="box"></button>
