--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    <main>
+   
        <div class="msg-container hide">
         <p id="msg" >Winner</p>
         <button id="new-btn">NEW GAME</button>
        </div>
-
+       <main>
         <h1 style="color: #e0b1cb;">Tic-Tac-Toe</h1>
       <div class="container">
         <div class="game">
@@ -27,9 +27,10 @@
             <button class="box"></button>
         </div>
       </div>
-      <button id="reset-btn">Reset Button</button>
+      <button id="reset-btn">Reset the Game</button>
     </main>
     
 </body>
 <script src="script.js"></script>
 </html>
+
